--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,17 +1,19 @@
-@import url("https://fonts.googleapis.com/css?family=Josefin+Sans:400,700|Open+Sans&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,700|Open+Sans&display=swap');
 
-@import "abstracts/ functions";
-@import "abstracts/ mixins";
-@import "abstracts/ variables";
+@import 'abstracts/mixins';
+@import 'abstracts/variables';
+@import 'abstracts/globals';
 
-@import "base/animations";
-@import "base/base";
-@import "base/typography";
-@import "base/utilities";
+@import 'base/animations';
+@import 'base/typography';
+@import 'base/utilities';
 
-@import "components/buttons";
+@import 'components/buttons';
 
-@import "layout/header";
-@import "layout/navigation";
-
-@import "pages/home";
+@import 'layout/header';
+@import 'layout/navigation';
+@import 'layout/about';
+@import 'layout/services';
+@import 'layout/newsletter';
+@import 'layout/blog';
+@import 'layout/footer';
