improved the file structure

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
-$primary-colour: #d32f2f;
-$secondary-colour: #7c4dff;
+$primary-colour: #ac3f21;
+$secondary-colour: #f3cf7a;
 $background-colour: #fff8f7;
 $primary-text: #212121;
 $secondary-text: #fff;
-$btn-hover: #f44336;
+$btn-hover: #be6a15;
