--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,34 +1,96 @@
-@import "variables";
-
 // *NAVIGATION
 .name {
-  font-size: 1.5rem;
-  /* removes the default top and bottom margin */
-  margin: 0;
-  color: $primary-colour;
+	font-size: 1.5rem;
+	/* removes the default top and bottom margin */
+	margin: 0;
+	color: $primary-colour;
 }
 
 .main-header {
-  height: 5rem;
-  justify-content: space-around;
-  align-items: center;
-  margin: auto;
+	height: 5rem;
+	justify-content: space-around;
+	align-items: center;
+	padding-top: 5rem;
+	margin: auto;
 }
 
 .nav-links {
-  justify-content: space-around;
+	justify-content: space-around;
 
-  li a {
-    color: #fff;
-    font-size: 1.25rem;
-    transition: all 0.5s ease;
+	li a {
+		color: #fff;
+		font-size: 1.25rem;
+		transition: all 0.5s ease;
 
-    &:hover {
-      color: $primary-colour;
-    }
-  }
+		&:hover {
+			color: $btn-hover;
+		}
+	}
 
-  a {
-    padding: 0.625rem 0.938rem;
-  }
+	a {
+		padding: 0.625rem 0.938rem;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.hamburger div {
+		width: 1.875rem;
+		height: 3px;
+		margin: 5px;
+		transition: 0.3s ease;
+		background: #000;
+	}
+
+	.main-header {
+		position: relative;
+		background-color: $secondary-colour;
+		padding-top: 0rem;
+	}
+
+	// positioning the hamburger
+	.hamburger {
+		position: absolute;
+		cursor: pointer;
+		right: 15%;
+		top: 50%;
+		transform: translate(-5%, -50%);
+		z-index: 2;
+	}
+
+	// Hamburger animation
+	.toggle .line-1 {
+		transform: rotate(-45deg) translate(-5px, 6px);
+	}
+
+	.toggle .line-2 {
+		opacity: 0;
+	}
+
+	.toggle .line-3 {
+		transform: rotate(45deg) translate(-5px, -6px);
+	}
+
+	.nav-links {
+		position: absolute;
+		left: 0;
+		background: $secondary-colour;
+		flex-direction: column;
+		top: 100%;
+		text-align: center;
+		width: 100%;
+		height: 30vh;
+		clip-path: circle(100px at 90% -60%);
+		-webkit-clip-path: circle(100px at 90% -60%);
+		transition: all 0.5s ease-out;
+		z-index: 2;
+
+		li a {
+			color: #fff;
+		}
+	}
+
+	.nav-links.open {
+		clip-path: circle(1000px at 90% -60%);
+		-webkit-clip-path: circle(1000px at 90% -60%);
+	}
 }
