improved mobile responsiveness width

--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,32 +1,57 @@
 .about {
-  @include contain;
-  @include flexCenter;
-  flex-wrap: wrap;
-  padding-top: 6.25rem;
+	@include contain;
+	@include flexCenter;
+	flex-wrap: wrap;
+	padding-top: 6.25rem;
 
-  div {
-    flex: 1;
-    overflow: hidden;
-  }
+	div {
+		flex: 1;
+		overflow: hidden;
+	}
 
-  .about-content p {
-    color: #888;
-    font-family: "Open Sans", sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.8;
-    margin-bottom: 1.25rem;
-  }
+	.about-content p {
+		color: #888;
+		font-family: 'Open Sans', sans-serif;
+		font-size: 1rem;
+		font-weight: 400;
+		line-height: 1.8;
+		margin-bottom: 1.25rem;
+	}
 }
 
 .about-img {
-  padding: 0 3.125rem 0 3.125rem;
+	padding: 0 3.125rem 0 3.125rem;
 }
 
 .about-content {
-  padding-right: 3.125rem;
+	padding-right: 3.125rem;
 }
 
 .about-img {
-  display: grid;
+	display: grid;
+}
+
+@media screen and (max-width: 768px) {
+	// *ABOUT
+	.about {
+		flex-direction: column;
+		padding-top: 75px;
+	}
+
+	.about-content {
+		padding-top: 25px;
+	}
+
+	.about-content .intro-title {
+		font-size: 1.25rem;
+	}
+
+	.about .about-content p {
+		font-size: 0.875rem;
+	}
+
+	.about-img {
+		align-items: center;
+		padding: 0rem;
+	}
 }
