--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -6,6 +6,9 @@
 	margin: 0 auto;
 	padding: 2rem;
 	overflow: hidden;
+	@media screen and (max-width: 768px) {
+		width: 90%;
+	}
 }
 
 @mixin flexCenter {
