--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -72,6 +72,7 @@
 	&:hover {
 		background-color: #fff;
 		box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11), 0 5px 15px 0 rgba(0, 0, 0, 0.08);
+		cursor: pointer;
 	}
 
 	p {
@@ -94,4 +95,16 @@
 	padding-right: 7.188rem;
 	position: relative;
 	margin-bottom: 0.938rem;
+}
+
+@media screen and (max-width: 768px) {
+	// *MENU
+	.tabs .tabs-container .tab-item {
+		padding: 1rem;
+		font-size: 1rem;
+	}
+
+	.d-grid {
+		grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+	}
 }
