improved about mobile responsiveness

--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -35,11 +35,12 @@
 	// *ABOUT
 	.about {
 		flex-direction: column;
-		padding-top: 75px;
+		margin-top: 75px;
 	}
 
 	.about-content {
 		padding-top: 25px;
+		padding-right: 0rem;
 	}
 
 	.about-content .intro-title {
