--- a/sass/layout/_services.scss
+++ b/sass/layout/_services.scss
@@ -1,45 +1,46 @@
 // *SERVICES
 .service-content {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  grid-gap: 20px;
-  text-align: center;
-  margin-top: 2rem;
-  overflow: hidden;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+	grid-gap: 20px;
+	text-align: center;
+	margin-top: 2rem;
+	overflow: hidden;
 
-  img {
-    padding-bottom: 20px;
-  }
+	img {
+		padding-bottom: 20px;
+	}
 }
 
 // *SVG Transitioning
 .svg-1 {
-  transform: translateY(-135px);
-  opacity: 0;
-  transition: 0.6s all ease-in-out;
+	transform: translateY(-135px);
+	opacity: 0;
+	transition: 0.6s all ease-in-out;
 }
 
 .svg-2 {
-  transform: translateY(-135px);
-  opacity: 0;
-  transition: 0.8s all ease-in-out;
+	transform: translateY(-135px);
+	opacity: 0;
+	transition: 0.8s all ease-in-out;
 }
 
 .svg-3 {
-  transform: translateY(-135px);
-  opacity: 0;
-  transition: 1s all ease-in-out;
+	transform: translateY(-135px);
+	opacity: 0;
+	transition: 1s all ease-in-out;
 }
 
 .svg-4 {
-  transform: translateY(-135px);
-  opacity: 0;
-  transition: 1.2s all ease-in-out;
+	transform: translateY(-135px);
+	opacity: 0;
+	transition: 1.2s all ease-in-out;
 }
 
 .svg-appear {
-  opacity: 1;
-  transform: translateY(0px);
+	opacity: 1;
+	transform: translateY(0px);
 }
 
-
+@media screen and (max-width: 768px) {
+}
