--- a/sass/layout/_newsletter.scss
+++ b/sass/layout/_newsletter.scss
@@ -1,47 +1,67 @@
 .newsletter {
-  margin-top: 5rem;
-  background: url("../img/background.jpg") center center / cover;
-  /* puts a cyan overlay on the background image */
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
-  height: 40vh;
-  text-align: center;
-  background-attachment: fixed;
-  position: relative;
+	margin-top: 5rem;
+	background: url('../img/background.jpg') center center / cover;
+	/* puts a cyan overlay on the background image */
+	box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
+	height: 40vh;
+	text-align: center;
+	background-attachment: fixed;
+	position: relative;
 }
 
 .newsletter-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #fff;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: #fff;
 }
 
 .news-header {
-  font-size: 1.563rem;
-  padding-bottom: 0.625rem;
-  font-weight: 600;
+	font-size: 1.563rem;
+	padding-bottom: 0.625rem;
+	font-weight: 600;
 }
 
 .news-description {
-  font-size: 20px;
-  padding-bottom: 10px;
-  font-weight: 300;
+	font-size: 20px;
+	padding-bottom: 10px;
+	font-weight: 300;
 }
 
-input[type="email"] {
-  outline: 0;
-  border: none;
-  padding: 0.625rem 1.563rem;
-  width: 40%;
-  border-radius: 43px 0 0 43px;
-  border-bottom: 3px solid rgba(0, 0, 0, 0.05);
-  margin-right: -5px;
+input[type='email'] {
+	outline: 0;
+	border: none;
+	padding: 0.625rem 1.563rem;
+	width: 40%;
+	border-radius: 43px 0 0 43px;
+	border-bottom: 3px solid rgba(0, 0, 0, 0.05);
+	margin-right: -5px;
 }
 
 .news {
-  @include btnFormat;
-  padding: 0.563rem 0.625rem;
-  font-size: 12px;
-  border-radius: 0 2.688rem 2.688rem 0;
+	@include btnFormat;
+	padding: 0.563rem 0.625rem;
+	font-size: 12px;
+	border-radius: 0 2.688rem 2.688rem 0;
+}
+
+@media only screen and (max-width: 768px) {
+	input[type='email'] {
+		width: 100%;
+		margin: 0 auto;
+		border-radius: 43px;
+	}
+
+	.news {
+		border-radius: 43px;
+		margin-top: 1.5rem;
+	}
+
+	form {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
 }
