--- a/sass/layout/_blog.scss
+++ b/sass/layout/_blog.scss
@@ -1,7 +1,7 @@
 // *OUR BLOG
 .blog-content {
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 	grid-gap: 1.25rem;
 }
 
